err/monkeycommons.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/MonkeyCommons-201212.post1.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/commons'...
Compiling './lib/python3.5/site-packages/commons/color.py'...
***   File "./lib/python3.5/site-packages/commons/color.py", line 244
    except (IOError, OSError), e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/commons/funcutils.py'...
***   File "./lib/python3.5/site-packages/commons/funcutils.py", line 133
    print "Foo instance's do_sth() called'"
                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/commons/ooputils.py'...
***   File "./lib/python3.5/site-packages/commons/ooputils.py", line 56
    print "post_name_changed:", name, new_val
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/commons/strutils_from_webpy.py'...
***   File "./lib/python3.5/site-packages/commons/strutils_from_webpy.py", line 96
    raise ValueError, "Direction needs to be r or l."
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/commons/unicodeutils.py'...
***   File "./lib/python3.5/site-packages/commons/unicodeutils.py", line 14
    cjk_unified_ideographs = ur'\u4E00-\u9FFF'
                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/iptools'...
Listing './lib/python3.5/site-packages/iptools-0.6.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
